tests/fail/emptyIfCondition.llcl
/*
error: if statement condition expected a bool but got nothing
9  |fn main(): Int8 {
10 |    if () {
        ^^ if statement condition is empty
11 |		
*/

fn main(): Int8 {
	if () {
		
	}
	return 0;
}